6 commit