@@ -1,12 +1,12 @@
 package com.task.array.validator;
 
 public class DataValidator {
-    private static final String VALID_REGEX = "^[\\d\\s,;-]+$";
+    private static final String LINE_VALIDATION_REGEX = "^[\\d\\s,;-]+$";
 
     public boolean isValid(String line) {
-        if (line == null || line.trim().isEmpty()) {
+        if (line == null || line.trim().isBlank()) {
             return false;
         }
-        return line.matches(VALID_REGEX);
+        return line.matches(LINE_VALIDATION_REGEX);
     }
 }
